# bull-terrier

./: .gitignore  .pre-commit-config.yaml  CREDITS.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml  question.yaml
bull_terrier/domain/: exceptions.py
bull_terrier/domain/dtypes/: probability.py
bull_terrier/domain/entities/git/: branch.py  tag.py
bull_terrier/domain/entities/http/: mime.py
bull_terrier/domain/entities/math/: sha.py
bull_terrier/domain/entities/net/github/: repository.py
bull_terrier/domain/entities/remote/github/: username.py
bull_terrier/domain/entities/vcs/git/: branch.py  commit.py  shortref.py  tag.py
bull_terrier/domain/entities/web/com/bitbucket/: repository.py  workspace.py
bull_terrier/domain/entities/web/com/github/: repository.py  username.py
bull_terrier/domain/entities/web/com/gitlab/: project.py  username.py
bull_terrier/domain/protocols/: estimator.py
bull_terrier/domain/services/interfaces/http/: downloader.py
bull_terrier/domain/services/interfaces/storage/: base.py  cache.py  keyvalue.py
bull_terrier/domain/services/interfaces/storage/nosql/: keyvalue.py
bull_terrier/domain/services/interfaces/web/com/: bitbucket.py  github.py  gitlab.py
bull_terrier/infrastructure/adapters/http/: downloader.py
bull_terrier/infrastructure/adapters/storage/: cache.py  keyvalue.py
bull_terrier/infrastructure/interfaces/storage/: keyvalue.py
bull_terrier/infrastructure/schemas/storage/: keyvalue.py
bull_terrier/utils/: asyncio.py  datetime.py  typing.py
bull_terrier/utils/asyncio/: lock.py
docs/: DTYPES.md  WORKFLOW.md
docs/guide/: WORKFLOW.md
tests/docstring/: __main__.py
tests/utils/core/: root.py
