[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bull-terrier"
version = "0.0.0"
description = "Cross-Platform Plagiarism Detection Software"
license = "MIT"
authors = ["Sergei Bogdanov <syubogdanov@outlook.com>"]
maintainers = ["Sergei Bogdanov <syubogdanov@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/syubogdanov/bull-terrier"
repository = "https://github.com/syubogdanov/bull-terrier"
documentation = "https://github.com/syubogdanov/bull-terrier/tree/main/docs/"
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
eth-pydantic-types = "~0.1.0"
pydantic = "~2.7"
python = ">=3.8, <3.13"
typing-extensions = { version = "~4.12", python = "<3.9" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = { version = "~3.7", python = "^3.9" }

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
mypy = "~1.10"
ruff = "~0.3"

[tool.mypy]
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
python_version = "3.8"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

[tool.ruff.lint.per-file-ignores]
"bull_terrier/domain/entities/*" = ["TCH001"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
